src/styles.scss
$fa-font-path: "../node_modules/font-awesome/fonts";
/* You can add global styles to this file, and also import other style files */


$tern-eucalypt:#506428; 
$old-tern-eucalypt:rgb(97, 106, 52);
$tern-orange:rgb(171,108,0);
$tern-green:rgb(85,111,0);
$tern-eucalypt-light:rgb(211,217,203);//lighten($tern-eucalypt,25%);
$tern-orange-light:lighten($tern-orange,25%);

$header-height:8vw;
$border-thickness:15px;
$big-border: $border-thickness solid $tern-eucalypt-light;

$map-control-offset:10px;

$about-margin:48px;
$about-text-width:60%;

$white:  #fff !default;
$gray-100: #f8f9fa !default;
$gray-200: #e9ecef !default;
$gray-300: #dee2e6 !default;
$gray-400: #ced4da !default;
$gray-500: #adb5bd !default;
$gray-600: #868e96 !default;
$gray-700: #495057 !default;
$gray-800: #343a40 !default;
$gray-900: #212529 !default;
$black:  #000 !default;

$grays: (
  100: $gray-100,
  200: $gray-200,
  300: $gray-300,
  400: $gray-400,
  500: $gray-500,
  600: $gray-600,
  700: $gray-700,
  800: $gray-800,
  900: $gray-900
) !default;

$blue:    #007bff !default;
$indigo:  #6610f2 !default;
$purple:  #6f42c1 !default;
$pink:    #e83e8c !default;
$red:     #dc3545 !default;
$orange:  #fd7e14 !default;
$yellow:  #ffc107 !default;
$green:   #28a745 !default;
$teal:    #20c997 !default;
$cyan:    #17a2b8 !default;

$colors: (
  blue: $blue,
  indigo: $indigo,
  purple: $purple,
  pink: $pink,
  red: $red,
  orange: $orange,
  yellow: $yellow,
  green: $green,
  teal: $teal,
  cyan: $cyan,
  white: $white,
  gray: $gray-600,
  gray-dark: $gray-800
) !default;

$theme-colors: (
  primary: $tern-orange,
  secondary: $tern-eucalypt,
  success: $green,
  info: $cyan,
  warning: $yellow,
  danger: $red,
  light: $gray-100,
  dark: $gray-800
);

$font-family-sans-serif: 'Montserrat', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
$font-family-base:       $font-family-sans-serif;
$font-size-base: 0.875rem;

$header-text:$tern-eucalypt;

@import "../node_modules/font-awesome/scss/font-awesome.scss";
@import '../node_modules/bootstrap/scss/bootstrap';
@import '../node_modules/map-wald/map-wald.scss';
@import url('https://fonts.googleapis.com/css?family=Montserrat');

.gm-style{
  font-family: $font-family-sans-serif !important;
}

.header-row {
  background: url(assets/images/bannerbg.jpg) no-repeat center center;
  background-size:cover;

  width:100%;
  position: fixed;
  top:0px;
  left:0px;
  right:0px;
  height:$header-height;
  border-bottom: $big-border;

}

.main-row{
  width:100%;
  position: fixed;
  top:$header-height;
  left:0px;
  right:0px;
  bottom:0px;
}

.main-map{
  position:relative;
  left:0px;
  top:0px; /* $navbar-height */
  width:100%;
  height:auto;
}

.sidebar{
  overflow-y: auto;
  .card-body{
    padding-left:0;
    padding-right:0;
    padding-top:0;
    padding-bottom:0;

    .layers-control{
      width:100%;
    }
  }
}

.sebm-google-map-container{
  width:100%;
  height:100%;
}

/*
@media screen and (min-width:($screen-xs-max+1)) {
 */

@include media-breakpoint-up(sm) {
  .main-map {
    width:100%;
    height:auto;
  }
}


.footer {
  position: fixed;
  bottom: 0px;
  left:0px;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 50px;
  line-height: 50px; /* Vertically center the text there */
  background-color:$tern-orange;

  .container-fluid{
    padding-left:0px;
    padding-right:0px;
  }
}

.hoverlayer{
    text{
        fill: #000 !important;
    }
}

.greyed {
  color: gray;
}

.theme {
  color: $tern-eucalypt;
}

.active-layer {
  font-weight: bold;
}

.ldv-title {
  color:$header-text;

  margin-top:0px;
  margin-bottom:0px;
  padding-right:10px;
  h1 {
    display:inline;
    padding-left:6px;
    margin-bottom:0rem;
  }

  img{
    vertical-align: top;
    height:48px;
  }
}


.about-link{
  color:$header-text;
  position:absolute;
  font-weight: bold;
  font-size:1.2rem;
  top:10px;
  right:10px;
}

// .tern-gradient-bar, .sidebar .card-header, .sidebar.logos::after{
//   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#616a34+1,616a34+74,e5e5e5+100 */
//   background: $tern-eucalypt-light; /* Old browsers */
//   background: -moz-linear-gradient(left, $tern-eucalypt-light 1%, $tern-eucalypt-light 64%, $gray-100 100%); /* FF3.6-15 */
//   background: -webkit-linear-gradient(left, $tern-eucalypt-light 1%, $tern-eucalypt-light 64%, $gray-100 100%); /* Chrome10-25,Safari5.1-6 */
//   background: linear-gradient(to right, $tern-eucalypt-light 1%, $tern-eucalypt-light 64%, $gray-100 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
//   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#616a34', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 */
// }

// .card-header{
// }

.sidebar .card-header{
  padding-left:10px;
  background:$tern-eucalypt;
  padding-top:6px;
  padding-bottom:6px;

  .btn-link{
    color: $tern-eucalypt-light;
    font-weight: bold;
    font-size: 1.25rem;
    line-height:1.1rem;

    i.fa{
      position: absolute;
      right:5%;
    }
  }
}

.main-row .sidebar {
  background: $tern-eucalypt;
  background: $tern-eucalypt-light; /* Old browsers */
  background: -moz-linear-gradient(top, $tern-eucalypt-light 1%, $tern-eucalypt-light 80%, $tern-eucalypt 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top, $tern-eucalypt-light 1%, $tern-eucalypt-light 80%, $tern-eucalypt 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom, $tern-eucalypt-light 1%, $tern-eucalypt-light 80%, $tern-eucalypt 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d3d9cb', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 */

  // background: -moz-linear-gradient(top, $tern-eucalypt 1%, $tern-eucalypt-light 64%, $gray-100 100%); /* FF3.6-15 */
  // background: -webkit-linear-gradient(top, $tern-eucalypt 1%, $tern-eucalypt-light 64%, $gray-100 100%); /* Chrome10-25,Safari5.1-6 */
  // background: linear-gradient(to bottom, $tern-eucalypt 1%, $tern-eucalypt-light 64%, $gray-100 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#616a34', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 */
}

.sidebar .card {
  margin-left: $border-thickness;
  margin-right: $border-thickness;
  margin-bottom: $border-thickness;
  border-radius: 0px;
}


.sidebar{
  .tern-logo{
    img{
      max-width:8vw;
    }
  }
  .anu-logo{
    img{
      max-width:6vw;
    }
  }
}
.tern-logo{
  display:flex;
  align-items:center;
  height:100%;
  img{
    padding-top:15px;
  }
}

.anu-logo{
  display:flex;
  align-items:center;
  align-self: center;
  height:100%;
  img{
    padding:10px;
  }
}

.ncris-logo{
  display:flex;
  align-items:center;
  height:100%;
  img{
    padding-left:5px;
    padding-right:5px;
    padding-top:5px;
    max-height:90px;
  }
}

.sidebar.logos {
  overflow: hidden;
  border-right: $border-thickness solid transparent;
  .row {
    height:100%;
    .text-center {
      height: 100%;
    }
  }
}

//.sidebar.logos::after{
.header-row::after{
  content:"";
  opacity: 0.75;
  top:0;
  bottom:0;
  left:0;
  right:0;
  position: absolute;
  z-index: -1;
  background: $tern-eucalypt-light; /* Old browsers */
  background: -moz-linear-gradient(left, $tern-eucalypt-light 1%, $tern-eucalypt-light 64%, $gray-100 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(left, $tern-eucalypt-light 1%, $tern-eucalypt-light 64%, $gray-100 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to right, $tern-eucalypt-light 1%, $tern-eucalypt-light 64%, $gray-100 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d3d9cb', endColorstr='#f8f9fa',GradientType=1 ); /* IE6-9 */
}

.app-title {
  color: $header-text;
  div{
    display:table;
    height:100%;
    width:100%;
    h1 {
      font-size:3.75vw;//4rem;
      display: table-cell;
      vertical-align: middle;
    }
  }
}

@media screen and (min-width: 1200px) {
  .app-title{
    h1 {
      font-size: 36px;
    } 
  }
}
.about{
  .modal-content{
    border-radius: 25px;
    background: $tern-eucalypt-light; /* Old browsers */
    background: -moz-linear-gradient(top, $tern-eucalypt 1%, $tern-eucalypt 50%, $tern-eucalypt-light 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top, $tern-eucalypt 1%, $tern-eucalypt 50%, $tern-eucalypt-light 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, $tern-eucalypt 1%, $tern-eucalypt 50%, $tern-eucalypt-light 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#616a34', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 */
    .modal-header{
      border-bottom:none;
      color:$tern-orange-light;
      padding-top:64px;
      padding-bottom:8px;
      padding-left:0px;
      padding-right:0px;
      h4 {
        padding-left:$about-margin;
        padding-right:$about-margin;
      }
    }
    .modal-body{
      padding-left:0px;
      padding-right:0px;
      padding-top:8px;
      border:none;
      color:$gray-100;

      h2{
        padding-left:$about-margin;
        padding-right:$about-margin;
      }

      p.about-info, p.about-feedback, p.about-disclaimer{
        padding-left:$about-margin;
        padding-right:$about-margin;
        margin-top:32px;
        a{
          color:$tern-orange-light;
        }
      }

      p.about-info,p.about-feedback{
        width:$about-text-width;
      }

      .row.about-links{
        padding:$about-margin;
        // padding-left:$about-margin;
        // padding-right:$about-margin;
      }

      .about-logos{
        margin-top:32px;
        border-top:2px solid $tern-orange;
        .row:first{
          margin-top:12px;
        }
        .row{
          margin-top:12px;
          margin-left:$about-margin;
          margin-right:$about-margin;
        }
      }
    }

    .modal-footer{
      border-top:none;

      .btn {
        display:none;
      }
    }
  }
}

.map-control.left-bottom{
  margin-left:$map-control-offset;
}

.map-control.left-top{
  margin-left:$map-control-offset;
  margin-top:$map-control-offset;
}

.map-control.right-bottom{
  margin-right:$map-control-offset;
}

.layer-info-target{
  color:$tern-orange;
}

.tern-map-legend{
  max-width:300px;
}

.bb-vertical{
  background:$tern-eucalypt-light;
  border:1px solid $gray-100;
  max-width:36px;
  border-radius: 2px;
  .btn.btn-sm{
    margin:1px;
  }
}

